2009-05-01 yusei
* Fix some mistakes on previous field library conversion.

2009-04-30 yusei
* Simplify field libraries and proxy fields. Old field libraries are kept for backward compatibility.
* Need recent version of erp5_core(newer than r1193).
* Update dependencies.

2009-04-18 Kazuhiko
* Version 5.4.1

2009-02-16 jerome
* make it possible to configure the accounting accounts on supply lines.

2008-11-13 yusei
* Start to develop version 5.4.

2008-10-14 yusei
* Start to develop version 5.3.

2008-09-25 yusei
* Replace utf-8 character to character entity reference. You can use only ASCII character to field title, otherwise UnicodeDecodeError occurs when user exchange document to external format.

2008-08-28 yusei
* Use Base_translateString or translateString instead of N_ for translation message.

2008-07-01 luke
* added support for int_index and reference for Transformation children
* Transformation related forms proxified

2008-06-27 yusei
* Start to develop version 5.2.

2008-06-26 yusei
* Revise version to 5.1.

2008-06-17 jerome
* Remove my_resouce from Resource field library. Categorising resources with resource category is not good because it's cannot be acquired on movements.

2008-04-21 jerome
* Fix default images on Product and Component (for virtual hosting)

2008-04-19 yo
* Bump to 5.0.

2008-04-16 alex
* Supplies moved from Trade to here
* push version to 1.0rc6

2008-03-31 jerome
* Add default_image on Products and Component.

2008-02-07 alex
* proxify some fields, use Resource_viewFieldLibrary instead of BasePdm_fieldLibrary
* on resource, add two supply types (purchase and sale) instead of one

2008-01-16 kazuhiko
* enable acquire_local_roles on Transformation Transformed Resource and Transformation Module.

2007-09-25 yo
* Set module group on portal types.

2007-08-13 Jerome
* Remove portal type actions that are now defined as global actions

2006-09-06 Romain
* Fix the group order in some Forms.

2006-08-28 Romain